--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,2 +1,46 @@
-<h1>Truman Benjamin</h1> 
-<link rel="stylesheet" href="">
+<h1 class="welcome">Welcome to CSE Motors!</h1> 
+
+<div class="split-container">
+    <div class="info">
+        <h1>DMC Delorean</h1>
+        <h2>3 Cup Holders</h2>
+        <h2>Superman doors</h2>
+        <h2>Fuzzy Dice!</h2>
+        <a href="#" class="cta-button">Own Today!</a>
+    </div>
+    <div class="image">
+        <img src="images/vehicles/delorean.jpg" alt="Car Image" class="carimage">
+    </div>
+</div> 
+
+<div class="content">
+    <div class="reviews">
+        <h1>DMC Delorean Reviews</h1>
+        <p>So fast it's almost like traveling in time! (4/5)</p>
+        <p>"Coolest ride on the road." (5/5)</p>
+        <p>"I'm feeling McFly!" (5/5)</p>
+        <p>"The most futuristic ride of our day." 4.5/5</p>
+        <p>"80's livin and I love it! (5/5)</p>
+    </div>
+    <div class="upgrades">
+        <h1>Delorean Upgrades</h1>
+        <div class="upgrade-box">
+            <a href="" class="upgrade-item">
+                <img src="images/upgrades/flux-cap.png" alt="Flux Capacitor" class="upgrade-image">
+                Flux Capacitor
+            </a>    
+            <a href="" class="upgrade-item">
+                <img src="images/upgrades/flame.jpg" alt="Flame Decals" class="upgrade-image">
+                Flame Decals
+            </a>
+            <a href="" class="upgrade-item">
+                <img src="images/upgrades/bumper_sticker.jpg" alt="Bumper Stickers" class="upgrade-image">
+                Bumper Stickers
+            </a>
+            <a href="" class="upgrade-item">
+                <img src="images/upgrades/hub-cap.jpg" alt="Hub Caps" class="upgrade-image">
+                Hub Caps
+            </a>
+        </div>
+    </div>
+</div>
