--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,9 +1,3 @@
 <nav>
-    <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/inventory/custom">Custom</a></li>
-        <li><a href="/inventory/sedan">Sedan</a></li>
-        <li><a href="/inventory/suv">SUV</a></li>
-        <li><a href="/inventory/truck">Truck</a></li>
-    </ul>
+<%- nav %>
 </nav>
