--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -174,7 +174,7 @@ body {
 .image img {
   max-width: 90%;
   height: auto; 
-  box-shadow: 0px 4px 8px rgba(0,0,0,0.2,); 
+  box-shadow: 0px 4px 8px rgba(0,0,0,0.2); 
 }
 
 /* Reviews and Upgrades Section */
