--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -1,14 +1,14 @@
-<% /* views/inventory/management.ejs */ %>
+<div id="inventory-management">
+  <% if (title) { %>
+    <h1 class="page-title"><%= title %></h1>
+  <% } %>
 
-<% if (title) { %>
-  <h1 class="page-title"><%= title %></h1>
-<% } %>
+  <% if (message) { %>
+    <p class='notice'><%= message %></p>
+  <% } %>
 
-<% if (message) { %>
-  <p class='notice'><%= message %></p>
-<% } %>
-
-<ul class="inventory-management-links">
-  <li><a href="/inv/add-classification">Add New Classification</a></li>
-  <li><a href="/inv/add-inventory">Add New Inventory Item</a></li>
-</ul>
+  <ul class="inventory-management-links">
+    <li><a href="/inv/add-classification">Add New Classification</a></li>
+    <li><a href="/inv/add-inventory">Add New Inventory Item</a></li>
+  </ul>
+</div>
