--- a/views/inventory/add-classification.ejs
+++ b/views/inventory/add-classification.ejs
@@ -24,6 +24,7 @@
   >
     <label for="classificationName">Name</label>
     <input
+      <% /* client-side validation */ %>
       type="text"
       name="classification_name"
       id="classificationName"
