--- a/views/inventory/add-inventory.ejs
+++ b/views/inventory/add-inventory.ejs
@@ -3,6 +3,7 @@
     <h1 class='page-title'><%= title %></h1>
   <% } %>
 
+  <% /* server-side validation errors */ %>
   <% if (errors && errors.length) { %>
     <ul class='error-list'>
       <% errors.forEach(err => { %>
